# nd-aimm-main-computer

./: .gitignore  .gitmodules  AIMM  CMakeLists.txt  CREATE  Doxyfile  Earthfile  README.MD
.github/workflows/: aimm_build.yml  aimm_build_earthly.yml  aimm_docs.yml
docs/: README.md  pyproject.toml
docs/docs/: _config.yml  _toc.yml
docs/notebooks/: building-on-windows-linux.ipynb  code-architecture.ipynb  contribution-guidelines.ipynb  getting-started.ipynb  learning-c++.ipynb  learning-cv.ipynb  world-bank-api.ipynb
examples/: oak_lr_stereo.txt
include/: emergency.h  event_bus.hpp  events.h  inference.h  initializer.h  logger_monitor.h  monster_generated.h  monster_serializer.h  peripherals.h  pipeline.h  ring_buffer.h  serialib.h  thread_safe_queue.h  threading.h  threading.tpp  udp.h
include/analysis/: fsa.h  stlastar.h
include/analysis/r_tree/: r_tree.h
include/gui/: IconsFontAwesome6.h  Sample.h  aimm_headless.h  aimm_test_detail.h  aimm_test_manager.h  console.h  console_logger.h  gui.h  main_glfw_gl3.h  runner.h  terminal.tpp  utils.h
include/gui/native/: IconsFontAwesome6.h  imgui_console_logger.h  misc.h  terminal.h  terminal_commands.h  terminal_helpers.h
include/gui/networking_helper/: ImGuiNotify.h  NetImgui_Config.h
include/listeners/: emergency_listener.h  event_listener.h  shutdown_listener.hpp
include/mavlink/: mavlink_dameon.h
include/networking/: rns_manager.h  rns_mapping.h  rns_node_data.h  rns_sender.h
include/serialization/: auxillary_generated.h  example_generated.h  example_serializer.h  heartbeat_generated.h  serial_abstract.h  serial_data.h  serializer_factory.h  startup_generated.h  test_generated.h
include/serialization/deserializer/: deserializer_object.h  monster.h
include/tests/: a_star_check_t.h  fb_check_t.h  peripherals_t.h  thread_pool_t.h
include/threading/: thread_safe_gui_status_logger.h  thread_safe_queue_network.hpp
profiler/: filegone.py  memleak.py
runnable/: doc_viewer.py  rns_announcer_handler.py  rns_sender.py  rns_verifier.py
scripts/: color_nd.sh  color_test.sh  old.txt  post_build_script.sh
servers/: AIMMServerDarwin  netImgui.cfg  netImgui_2.cfg
src/: emergency.cpp  events.cpp  initialization.cpp  main.cpp  peripherals.cpp  threading.cpp
src/analysis/: analysis.cpp  normalizer.cpp
src/gui/: Sample.cpp  SampleBasic.cpp  aimm_console.cpp  aimm_drawer.cpp  aimm_headless.cpp  aimm_settings.cpp  aimm_status.cpp  aimm_status_helper.cpp  aimm_status_logger.cpp  aimm_test_helper.cpp  gui.cpp  gui.md  main_glfw_gl3.cpp  runner.cpp
src/listeners/: emergency_listener.cpp  shutdown_listener.cpp
src/logger/: binding.cpp  logger.cpp
src/mavlink/: mavlink.cpp
src/networking/: rns_manager.cpp  rns_mapping.cpp  rns_sender.cpp  udp.cpp
src/pipeline/: inference.cpp  oak_lr_pipeline.cpp
src/serialization/: serialFactory.cpp  serial_factory.cpp  serialib.cpp  serializerExample.cpp  serializerMonster.cpp  serializer_example.cpp
src/serialization/deserializer/: deserializerHeartbeat.cpp
src/serialization/fbs/: auxillary.fbs  heartbeat.fbs  monster.fbs  startup.fbs
src/tests/: a_star_check_t.cpp  fb_check_t.cpp  flatbuffer_example_test.cpp  peripherals_t.cpp  thread_pool_t.cpp
